--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -10,7 +10,7 @@ FinancialTransactionsPage:
   withdraw_tab: "//li[contains(text(),'Withdraw')]"
   trading_account_element: "(//*[@id='listBody']//tr/td[3])[%s]//a"
 LeadViewInfo:
-  convert_lead_module: "//div[@id='sidebar']//tr[3]//a"
+  convert_lead_module: "//a[contains(text(),'Convert Lead')]"
 CRMClientDeposit:
   i_confirm_checkbox: "//*[@name='confirm']"
 ClientProfilePage:
@@ -18,7 +18,6 @@ ClientProfilePage:
   credit_in_sum: "//*[@id='rld_table_content']/tbody/tr[2]/td[6]/span[1]"
   i_confirm_checkbox: "//*[@name='confirm']"
   choose_account_drop_down: "//*[@id='ClientDepositConfirmation']//button[@title='Choose trading account']"
-  choose_number: "//span[contains(text(), '%s')]"
 ClientsPage:
   id_client: "//a[contains(text(), 'ACC')]"
   country: "//*[@id='customAdvanceSearch']/td[6]/div/div[1]/button"
