--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -6,11 +6,11 @@ brands:
 #- name: itrader
 #  config_file: itrader.yml
 
-- name: gmo
-  config_file: gmo.yml
+#- name: gmo
+#  config_file: gmo.yml
 
-#- name: capitalmarketsbanc
-#  config_file: capitalmarketsbanc.yml
+- name: capitalmarketsbanc
+  config_file: capitalmarketsbanc.yml
 #
 #- name: brokerxp
 #  config_file: brokerxp.yml
