--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,14 +1,14 @@
 tests_config:
 
 ######################################MY DASHBOARD TESTS########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
-#  class: MyDashboardActionsTest
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
+  class: MyDashboardActionsTest
+  tests:
 #    - test_edit_event_my_dashboard
-#    - test_email_icon
-#    - test_sms_icon
-#    - test_sorting_columns
-#    - test_searching_by_columns
+    - test_email_icon
+    - test_sms_icon
+    - test_sorting_columns
+    - test_searching_by_columns
 #
 #######################################MODULES ARE OPENS#########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
@@ -60,11 +60,11 @@ tests_config:
 #    - test_check_email_popup
 #
 ################################################CONVERT LEAD############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
-  tests:
-    - test_perform_convert_lead   # Creates a lead and converts it to a client
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+#  directive: reload_configuration
+#  class: LeadModuleTest
+#  tests:
+#    - test_perform_convert_lead   # Creates a lead and converts it to a client
 #
 ##################################################CLIENTS################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
@@ -88,12 +88,12 @@ tests_config:
 #  tests:
 #    - test_add_interaction  # Adds an interaction for a client
 #    - test_interaction_search   # Searches for an interaction for a client. Validates that only one result is returned.
-
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
-  class: AddEventTaskModule
-  tests:
-    - test_add_event
-    - test_edit_event
+#
+#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
+#  class: AddEventTaskModule
+#  tests:
+#    - test_add_event
+#    - test_edit_event
 #    - test_delete_interaction
 #    - test_email_icon
 #    - test_sms_icon
