--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -9,8 +9,8 @@ brands:
 #- name: brokerxp
 #  config_file: brokerxp.yml
 
-#- name: kaya_fx
-#  config_file: kaya_fx.yml
+- name: kaya_fx
+  config_file: kaya_fx.yml
 
-- name: itrader
-  config_file: itrader.yml
+#- name: itrader
+#  config_file: itrader.yml
