--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -9,8 +9,8 @@ brands:
 #- name: q8
 #  config_file: q8.yml
 
-- name: kontofx
-  config_file: kontofx.yml
+#- name: kontofx
+#  config_file: kontofx.yml
 #
 #- name: brokerz
 #  config_file: brokerz.yml
@@ -18,3 +18,5 @@ brands:
 #- name: 4xfx
 #  config_file: 4xfx.yml
 
+- name: trade99
+  config_file: trade99.yml
