--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,13 +1,13 @@
 brands:
 
-- name: brokerz
-  config_file: brokerz.yml
+#- name: brokerz
+#  config_file: brokerz.yml
 
 #- name: 4xfx
 #  config_file: 4xfx.yml
 #
-- name: ptbanc
-  config_file: ptbanc.yml
+#- name: ptbanc
+#  config_file: ptbanc.yml
 #
 #- name: q8
 #  config_file: q8.yml
@@ -18,3 +18,5 @@ brands:
 #- name: newforexstage2
 #  config_file: newforexstage2.yml
 
+- name: coin-bits
+  config_file: coin-bits.yml
