--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -26,6 +26,7 @@ FirstLeadInfo:
   first_lead_status_test: "R - New"
   first_lead_status_no_interest: "New"
   first_lead_status_new: "New"
+  first_lead_status1: "New"
   first_lead_status_new_lead: "New Lead"
   first_lead_status_c_new: "C - New"
   first_assigned_to: "Panda Auto"
@@ -61,6 +62,7 @@ SecondLeadInfo:
   first_lead_status_no_interest: "No interest"
   first_lead_status: "B - No interest"
   first_lead_status_new: "Not interested"
+  first_lead_status1: "B - No interest"
   first_lead_status_new_lead: "New Lead"
   first_lead_status_c_new: "B - No interest"
   first_assigned_to: "Panda Auto"
