--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,25 +1,10 @@
 brands:
 
-#- name: newforexstage2
-#  config_file: newforexstage2.yml
-#
-#- name: ptbanc
-#  config_file: ptbanc.yml
-#
-#- name: q8
-#  config_file: q8.yml
-#
-#- name: kontofx
-#  config_file: kontofx.yml
-#
-#- name: brokerz
-#  config_file: brokerz.yml
-#
-#- name: 4xfx
-#  config_file: 4xfx.yml
+- name: newrichmarkets
+  config_file: newrichmarkets.yml
 
-- name: trade99
-  config_file: trade99.yml
-#
-#- name: coin-bits
-#  config_file: coin-bits.yml
+- name: solocapitlas
+  config_file: solocapitlas.yml
+
+- name: uprofx
+  config_file: uprofx.yml
