--- a/src/test/python/resources/config/brands6.yml
+++ b/src/test/python/resources/config/brands6.yml
@@ -1,4 +1,10 @@
 brands:
 
-- name: kontofx
-  config_file: kontofx.yml
+- name: libramarkets
+  config_file: libramarkets.yml
+
+- name: tfxgo
+  config_file: tfxgo.yml
+
+- name: dax-300
+  config_file: dax-300.yml
