--- a/src/test/python/resources/config/brands11.yml
+++ b/src/test/python/resources/config/brands11.yml
@@ -1,8 +1,7 @@
 brands:
 
-- name: b-finance
-  config_file: b-finance.yml
-- name: eafx
-  config_file: eafx.yml
-- name: gxfx
-  config_file: gxfx.yml
+- name: financix
+  config_file: financix.yml
+
+- name: alferatrade
+  config_file: alferatrade.yml
