--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,4 +1,11 @@
 brands:
 
-- name: ptbanc
-  config_file: ptbanc.yml
+- name: kontofx
+  config_file: kontofx.yml
+
+- name: jonesmutual
+  config_file: jonesmutual.yml
+
+- name: swisscci
+  config_file: swisscci.yml
+  
