--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -1,4 +1,10 @@
 brands:
 
+- name: uft
+  config_file: uft.yml
+
 - name: ptbanc
   config_file: ptbanc.yml
+
+- name: 2mercados
+  config_file: 2mercados.yml
