--- a/src/test/python/resources/config/brands5.yml
+++ b/src/test/python/resources/config/brands5.yml
@@ -1,4 +1,10 @@
 brands:
 
-- name: brokerz
-  config_file: brokerz.yml
+- name: q8
+  config_file: q8.yml
+
+- name: hizlifx
+  config_file: hizlifx.yml
+
+- name: olympiamarkets
+  config_file: olympiamarkets.yml
