--- a/src/test/python/resources/config/brands10.yml
+++ b/src/test/python/resources/config/brands10.yml
@@ -6,5 +6,5 @@ brands:
 - name: grandefex
   config_file: grandefex.yml
 
-- name: wdcmarkets
-  config_file: wdcmarkets.yml
+#- name: wdcmarkets
+#  config_file: wdcmarkets.yml
