--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -3,8 +3,8 @@ brands:
 - name: newrichmarkets
   config_file: newrichmarkets.yml
 
-#- name: solocapitlas
-#  config_file: solocapitlas.yml
-#
-#- name: uprofx
-#  config_file: uprofx.yml
+- name: solocapitlas
+  config_file: solocapitlas.yml
+
+- name: uprofx
+  config_file: uprofx.yml
