--- a/src/main/python/ui/crm/model/BrandsXpath/gmo_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/gmo_xpath.yml
@@ -12,3 +12,5 @@ ClientsPage:
 ClientProfilePage:
   choose_account_drop_down: "//*[@id='ClientDepositConfirmation']//button[@title='Nothing selected']"
   choose_number: "//form[@id='ClientDepositConfirmation']//span[contains(text(), '%s')]"
+LeadsModule:
+  first_lead_email: "//tr[2]//div[contains(text(), 'pandaqa')]"
