--- a/src/main/python/ui/crm/model/BrandsXpath/itrader_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/itrader_xpath.yml
@@ -6,3 +6,5 @@ ClientsPage:
   id_client: "//a[contains(text(), 'ACC')]"
   country: "//*[@id='customAdvanceSearch']/td[5]/div/div[1]/button"
   country_input: "//*[@id='customAdvanceSearch']/td[5]/div/div[1]/ul/li[1]/div/input"
+LeadsModule:
+  first_lead_email: "//tr[2]//div[contains(text(), 'pandaqa')]"
