--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -30,6 +30,6 @@ brands:
 #- name: brokerxp
 #  config_file: brokerxp.yml
 #- name: fm-fx
-#  config_file: fm-fx.yml
+#  config_file: umi.yml
 #- name: capitalmarketsbanc
 #  config_file: capitalmarketsbanc.yml
