--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -1,4 +1,4 @@
 brands:
 
-- name: capitalmarketsbanc
-  config_file: capitalmarketsbanc.yml
+- name: itrader_global
+  config_file: itrader_global.yml
