--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -22,7 +22,9 @@ FirstLeadInfo:
   first_tittle: "tittle test"
   first_lead_source: "Conference"
   first_lead_status: "R - New"
+  first_lead_status_not_interested: "R - Not Intrested"
   first_lead_status_new: "New"
+  first_lead_status_giga: "C - New"
   first_lead_status_uft: "New"
   first_lead_status_b_test: "B - Test"
   first_assigned_to: "Panda Auto"
@@ -54,6 +56,7 @@ SecondLeadInfo:
   first_tittle: "second tittle test"
   first_lead_source: "Conference"
   first_lead_status: "B - No interest"
+  first_lead_status_giga: "R - Not Intrested"
   first_lead_status_new: "Not interested"
   first_lead_status_uft: "No interest"
   first_lead_status_b_test: "B - Test"
