--- a/src/test/python/resources/config/tests2.yml
+++ b/src/test/python/resources/config/tests2.yml
@@ -66,9 +66,9 @@ tests_config:
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
 #  class: AddEventTaskModule
 #  tests:
-###    - test_add_event
-###    - test_edit_event
-###    - test_delete_interaction
+#    - test_add_event
+#    - test_edit_event
+#    - test_delete_interaction
 #    - test_email_icon
 #    - test_sms_icon
 #    - test_mass_edit_tasks
