--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -60,10 +60,10 @@ tests_config:
 #  tests:
 #    - test_clients_mass_edit
 #
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Assign
-#  class: MassAssignTestCRM
-#  tests:
-#    - test_clients_mass_assign
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Assign
+  class: MassAssignTestCRM
+  tests:
+    - test_clients_mass_assign
 #
 ###################################### TASKS ##################################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
@@ -201,9 +201,9 @@ tests_config:
 #    - test_delete_user
 #
 ########################################### DOCUMENTS MODULE ###############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
-  class: DocumentModuleTest
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Test_Document_Module
+#  class: DocumentModuleTest
+#  tests:
 #    - test_searching_by_columns
-    - test_open_tabs
+#    - test_open_tabs
 #    - test_sorting
